--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@ instance/*
 .webassets-cache
 
 ### Upload folder
-uploads/
+# uploads/
 
 ### Flask.Python Stack ###
 # Byte-compiled / optimized / DLL files
