--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ install: pip install -r requirements.txt
 before_script:
   - python manage.py db migrate
   - python manage.py db upgrade
+script: pytest
 deploy:
   provider: heroku
   api_key:
